JEDIT 4.1 VERSION HISTORY

* Version 4.1pre6

Thanks to Giulio Piancastelli, John Perry, Joshua Miller, Kris Kopicki,
Marcelo Vanzin, Peter Cox, Rex Young, Rudolf Widmann and Steve Snider
for contributing to this release.

+ Editing Changes:

- The "Indent on Enter" and "Indent on Tab" options are no longer.
  (Actually, the former was removed in pre5, but I forgot to mention it
  in the changelog).

  The new way to change these options is to just rebind the ENTER and
  TAB keys in the Shortcuts option pane. There are several actions they
  can be bound to:

  Insert Enter
  Insert Enter and Indent
  Insert Tab
  Insert Tab and Indent
  Indent Line (if you want TAB to indent anywhere in a line, not just in
  the leading whitespace, like in emacs).

+ Syntax Highlighting Changes:

- Added Maple syntax highlighting (John Perry).
- Updated ColdFusion syntax highlighting (Joshua Miller).
- Updated Fortran syntax highlighting (Yifan Song).
- Updated PL-SQL syntax highlighting (Steve Snider).
- Updated Prolog syntax highlighting (Giulio Piancastelli)

+ Miscellaneous Changes:

- Holding down Alt while scrolling with the wheel mouse now moves the
  caret up or down. Holding down Shift and Alt will extend the selection
  up or down (Rudolf Widmann).

- The "HyperSearch Results" window now remembers old search results.
  They can be cleared out by right-clicking and selecting "Remove Node"
  from the resulting popup menu (Peter Cox).

- The content of the status bar can be customized in the new
  "Status Bar" pane of the Global Options dialog box (Kenrick Drew).

+ Platform-Specific Changes:

- Updated MacOS plugin (Kris Kopicki).
  - Added MacOS menu to the Plugins menu. Provides time saving features
    like revealing files and folders in the Finder, and running
    AppleScripts.
  - You can run AppleScripts (compiled, uncompiled and standalone).
    Scripts must be located in the scripts folder in the jEdit folder.