@@ -3,12 +3,9 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- fsb: no delete/rename for open files
-- insert repaints caret status three times
 - deadlock w/ read/write locks
 - what if dir search requires FTP login to list dir
 - soft wrap: dragging on last visible line throws NPEs
-- caret status updated too much
 [error] java.lang.ArrayIndexOutOfBoundsException: 2757:-18
 [error] 	at org.gjt.sp.jedit.Buffer.remove(Unknown Source)
 [error] 	at org.gjt.sp.jedit.textarea.Selection$Rect.setText(Unknown Source)
